# 2030popsong_maker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SOLO_SETUP.md  config.toml.example  pyproject.toml
docs/: CHATBOT_SECTION_16.md  DEMO.md  DESIGN.md  FRONTEND.md  HANDOFF_2026-05-12.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SETUP_GUIDE.md  VERIFICATION.md  song_concepts_2030_batch_01.md  song_concepts_2030_monthly.md  수노 가사만들기 지침.docx  페르소나 메이크자동화 .xlsx
docs/design-docs/: core-beliefs.md  index.md  stage1-trend.md  stage2-input.md  stage3-creator.md  stage4-imager.md  stage5-renderer.md  stage6-uploader.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: phase1-foundation.md  phase2-creation.md  phase3-render-upload.md  phase4-integration.md
docs/product-specs/: PRD.md  index.md  new-user-onboarding.md
docs/references/: API_REFERENCES.md
src/song_maker/: __init__.py  cli.py  config.py  gates.py  models.py  storage.py
src/song_maker/capcut/: __init__.py  handoff.py
src/song_maker/creator/: prompt.py  suno.py
src/song_maker/drive/: __init__.py  client.py
src/song_maker/imager/: gemini.py  prompt.py
src/song_maker/playlist/: __init__.py  timeline.py
src/song_maker/renderer/: ffmpeg.py
src/song_maker/sheet/: __init__.py  client.py  parse.py  persona_client.py
src/song_maker/transform/: __init__.py  lyric.py
src/song_maker/translator/: __init__.py  translate.py
src/song_maker/trend/: analyzer.py  youtube.py
src/song_maker/uploader/: youtube.py
src/song_maker/validation/: __init__.py  duplicate.py  lint.py
