[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "song-maker"
version = "0.1.0"
description = "YouTube 트렌드 기반 AI 곡 생성 → 렌더링 → 업로드 자동화 CLI 도구"
readme = {text = "YouTube 트렌드 기반 AI 곡 생성 자동화 CLI 도구", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-genai>=1.0",
    "gspread>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
songmaker = "song_maker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/song_maker"]
