[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "song-maker"
version = "0.1.0"
description = "1인 K-pop 플레이리스트 채널 자동화 CLI — ChatGPT → 구글시트 → Suno → Gemini → CapCut"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ezleeji38-lgtm"}]
keywords = ["suno", "gemini", "youtube", "kpop", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-genai>=1.0",
    "gspread>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/ezleeji38-lgtm/2030popsong_maker"
Repository = "https://github.com/ezleeji38-lgtm/2030popsong_maker"
Documentation = "https://github.com/ezleeji38-lgtm/2030popsong_maker/blob/main/README.md"
Issues = "https://github.com/ezleeji38-lgtm/2030popsong_maker/issues"

[project.scripts]
songmaker = "song_maker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/song_maker"]
